Added gameover image

--- a/.project
+++ b/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>res/Sheets/gameoverfrogger.png</name>
 			<type>1</type>
-			<location>C:/Users/Jean C Jimenez/Desktop/Art/gameoverfrogger.png</location>
+			<location>C:/Users/Fabiola/Documents/UPRM/2S, 1Y/CIIC 4010/Project 1 FROGGER/Frogger/res/Sheets/gameoverfrogger.png</location>
 		</link>
 	</linkedResources>
 </projectDescription>
