Changed image of sprites to fix turtle bug

--- a/.project
+++ b/.project
@@ -16,6 +16,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>res/Sheets/gameSprites.png</name>
+			<type>1</type>
+			<location>C:/Users/Fabiola/Documents/UPRM/2S, 1Y/CIIC 4010/Project 1 FROGGER/Frogger/res/Sheets/gameSprites.png</location>
+		</link>
+		<link>
 			<name>res/Sheets/gameoverfrogger.png</name>
 			<type>1</type>
 			<location>C:/Users/Fabiola/Documents/UPRM/2S, 1Y/CIIC 4010/Project 1 FROGGER/Frogger/res/Sheets/gameoverfrogger.png</location>
